<resources>
    <string name="app_name">Book Mart</string>
    <string name="title_activity_book_marketplace">BookMarketplaceActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="aid_bookmarket_logo">The Book Mart logo</string>
    <string name="welcome_to_bookmarket">Welcome to Book Mart</string>
    <string name="aid_book">A picture of the book being sold</string>
    <string name="aid_trade_book">A picture of the book you are looking for</string>
    <string name="default_price">$19.95</string>
    <string name="condition_default">Condition: Like New</string>
    <string name="book_details_default_title">Database System Concepts 6th Edition</string>
    <string name="book_details_author_default">Abraham Silberschatz, Henry F. Korth, S. Sudarshan</string>
    <string name="book_details_isbn_default">978–0–07–352332–3</string>
    <string name="buy">BUY</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="university">University</string>
    <string name="lehigh_university">Lehigh University</string>
    <string name="notifications">Notifications</string>
    <string name="my_sell_listings">My Sell Listings</string>
    <string name="my_trade_listings">My Trade Listings</string>
    <string name="my_desired_trades">My Desired Trades</string>
    <string name="sell">SELL</string>
    <string name="my_account">My Account</string>
    <string name="trade">TRADE</string>
    <string name="find_a_book">Find a Book</string>
    <string name="post_a_book">Post a Book</string>
    <string name="price">Price</string>
    <string name="add_a_picture">Add a Picture</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="add_to_my_trades">Add to my Trades</string>
    <string name="search_for_book">Search for a Book</string>
    <string name="enter_title_or_isbn">Enter a Title or ISBN</string>
    <string name="no_results">No Results Found</string>
    <string name="search_for_book_hint">Enter a title or ISBN</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="error_required">This field is required</string>
    <string name="error_too_short">This field is too short</string>
    <string name="error_too_long">This field is too long</string>
    <string name="posting_book">Posting your textbook…</string>

    <string-array name="book_conditions">
        <item>New</item>
        <item>Like New</item>
        <item>Good</item>
        <item>Bad</item>
    </string-array>

    <string name="string_new">New</string>
    <string name="like_new">Like New</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="error_email_or_password">Invalid email or password</string>
    <string name="signing_in">Signing in…</string>
    <string name="deleting_desired_trade">Deleting desired trade…</string>
    <string name="registering">Registering…</string>
    <string name="updating_listing">Updating your listing…</string>
    <string name="error_passwords_match">The two passwords must match</string>
    <string name="error_email_in_use">This email is already in use</string>
    <string name="notifying_seller">Notifying Seller…</string>
    <string name="notifying_trader">Notifying Trader…</string>
    <string name="adding_to_my_trades">Adding textbook to my trades…</string>
    <string name="editing_my_trade">Editing trade…</string>
    <string name="retrieving_book_information">Retrieving book information…</string>
    <string name="seller_notified">Seller notified!</string>
    <string name="trader_notified">Trader notified!</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_my_listings">MyListingsActivity</string>
    <string name="sign_out_message">Are you sure you want to sign out from Book Mart?</string>
    <string name="add_to_my_tades">Add to My Desired Tades</string>
    <string name="sign_out_title">Sign Out?</string>
    <string name="sign_out_successful">Successfully signed out!</string>
    <string name="post_successful">Post successful!</string>
    <string name="edit_successful">Edit successful!</string>
    <string name="edit">EDIT</string>
    <string name="edit_sell_listing">Edit your Sell Listing</string>
    <string name="create_sell_listing">Create a Sell Listing</string>
    <string name="edit_trade_listing">Edit your Trade Listing</string>
    <string name="create_trade_listing">Create a Trade Listing</string>
    <string name="update">UPDATE</string>

    <string name="nothing_new_sell_listings">You have no desired trades to show</string>
    <string name="nothing_new_trade_listings">You have no new trade listings to show</string>
    <string name="nothing_old_sell_listings">You have no sell listings to show</string>
    <string name="nothing_old_trade_listings">You have no trade listings to show</string>
    <string name="aid_no_listings">An image representing having no new listings</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="error_deleting_book">There was en error deleting the book</string>
    <string name="error_retrieving_book_info">There was en error retrieving the book\'s information</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

</resources>
