<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ClickableCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/margin_small">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical"
            android:padding="@dimen/margin_small">

            <ImageView
                android:id="@+id/recycler_book_image_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/aid_book"
                android:src="@drawable/ic_book_cover" />

            <TextView
                android:id="@+id/recycler_book_price_text_view"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_small"
                android:text="@string/default_price"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:orientation="vertical"
            android:padding="@dimen/margin_small">

            <TextView
                android:id="@+id/recycler_book_title_text_view"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/book_details_default_title" />

            <TextView
                android:id="@+id/recycler_book_author_text_view"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/book_details_author_default" />

            <TextView
                android:id="@+id/recycler_book_condition_text_view"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/condition_default" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>