<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:id="@+id/fragment_book_details_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fragment_book_details_book_image_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/aid_book"
                    android:padding="@dimen/margin_small"
                    android:src="@drawable/ic_book_cover" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_book_details_price_text_view"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/margin_small"
                        android:text="@string/default_price"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_book_details_condition_text_view"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/margin_small"
                        android:text="@string/condition_default"
                        android:textSize="18sp" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/fragment_book_details_title_text_view"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/margin_small"
                android:text="@string/book_details_default_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fragment_book_details_author_text_view"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/margin_small"
                android:text="@string/book_details_author_default"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fragment_book_details_isbn_text_view"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/margin_small"
                android:text="@string/book_details_isbn_default"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fragment_book_details_university_text_view"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/margin_small"
                android:text="@string/lehigh_university"
                android:textSize="18sp" />


        </LinearLayout>

        <Button
            android:id="@+id/fragment_book_details_submit_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/buy"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>