<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/default_book_form_image_container"
                style="@style/ClickableCardStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="0.4">

                <ImageView
                    android:id="@+id/default_book_form_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/aid_trade_book"
                    android:src="@drawable/ic_book_cover"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/default_book_form_add_picture_text_view"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="@dimen/margin_small"
                    android:drawableTop="@drawable/ic_add_a_photo_black_24dp"
                    android:text="@string/add_a_picture" />


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/default_book_form_price_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_small"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/default_book_form_price_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/price"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/default_book_form_condition_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_small" />

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/default_book_form_title_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/default_book_form_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/default_book_form_author_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/default_book_form_author_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/author"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/default_book_form_isbn_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/default_book_form_isbn_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/isbn" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/default_book_form_submit_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/sell" />

</android.support.v7.widget.CardView>