<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/register_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:drawableStart="@drawable/ic_account_circle_black_24dp"
                    android:hint="@string/full_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/register_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/register_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/register_confirm_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/register_university_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_school_black_24dp"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:drawableStart="@drawable/ic_school_black_24dp"
                    android:hint="@string/university"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/register_register_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/register" />

    </FrameLayout>

</android.support.v7.widget.CardView>