<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_desired_form_title_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/fragment_desired_form_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title"
                    android:inputType="textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_desired_form_author_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/fragment_desired_form_author_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/author"
                    android:inputType="textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_desired_form_isbn_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/fragment_desired_form_isbn_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/isbn" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/fragment_desired_form_submit_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/add_to_my_trades" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>